[metadata]
name = asyncvnc2
version = 1.9.0
author = Barney Gale, Andrew Shirayev
description = Asynchronous VNC for Python v2
long_description = file: README.rst
url = https://github.com/andrews239/asyncvnc2
license = GPL

[options]
py_modules = asyncvnc2
python_requires = >= 3.7
install_requires =
    cryptography
    keysymdef
    numpy
